# bangbang

./: .gitignore  AGENTS.md  Cargo.toml  plan.door-world-gate.md  plan.heist-scene.md  plan.props-walkability.md  plan.storyboard-doctor-advice.md
.cursor/agents/: implementation-agent.md  mcp-asset-creator.md  planner-agent.md  pr-reviewer.md
archived/: current-state.md
assets/: ASSET_STYLE_GUIDE.md  config.json  game.json
assets/dialogue/: bandit.json  docSawbones.json  mom.json
assets/npc/: bandit.npc.json  mom.npc.json
assets/scenes/: theHeist.scene.json
assets/skills/: rustyPeacemaker.json  sidearm.json
assets/tile_palettes/: default.json
assets/tiles/: farwest_ground.json  farwest_ground_metadata.json  farwest_interior.json  farwest_interior_metadata.json
assets/ui/: theme.json
docs/: antipatterns.md  architecture.md  assessment.md  current-state.md  game.md  maps.md  npc.md  proposed-changes.md  skills.md  ui.md
scripts/: build_dustfall_terrain_tileset.py
src/: assets.rs  config.rs  constants.rs  lib.rs  main.rs  map.rs  map_loader.rs  paths.rs  render_settings.rs  save_game.rs  software.rs
src/dialogue/: loader.rs  mod.rs  tree.rs
src/ecs/: components.rs  mod.rs  world.rs
src/gpu/: color.rs  frame_context.rs  mod.rs  pass_backpack.rs  pass_common.rs  pass_debug.rs  pass_entities.rs  pass_entity_debug.rs  pass_tilemap.rs  pass_ui.rs  renderer.rs  shader.wgsl  text_atlas.rs
src/render/: color.rs  mod.rs  text.rs
src/scene/: defs.rs  loader.rs  mod.rs
src/skills/: apply.rs  backpack_runtime.rs  defs.rs  (+3 more)
story/: MAP.md  context.md
(+48 files in other folders)
